--- a/references/references.css
+++ b/references/references.css
@@ -1,7 +1,7 @@
  .u-section-1 {
   background-position: 50% 50%;
   background-repeat: no-repeat;
-  background-image: url("images/wallpaper2you_380281.jpg");
+  background-image: url("images/ref.jpg");
   background-size: cover;
 }
 
